memperbaiki bug pada controler pembayaran/tagihan, menghapus Debug & die pada baru.html

--- a/app/views/donasi/buat/baru.html
+++ b/app/views/donasi/buat/baru.html
@@ -1,7 +1,6 @@
-<!-- <?php if (Session::exists('error_feedback')) {
+<?php if (Session::exists('error_feedback')) {
     $data_error_feedback = Session::flash('error_feedback');
-    Debug::pr($data_error_feedback);
-} ?> -->
+} ?>
 <!-- Header -->
 <section class="header text-center py-3 sticky">
     <div class="container d-flex gap-md-5 gap-2 justify-content-md-center align-items-md-center">
