memperbaiki html email follow up yang rusak, urutan auth.js pada default.html, focus pada select baru.css

--- a/public/assets/route/donasi/pages/css/baru.css
+++ b/public/assets/route/donasi/pages/css/baru.css
@@ -11,6 +11,11 @@ span.selection {
     border-color: #ced4da !important;
     border-radius: 0.25rem;
     height: 100%;
+    outline-width: 0px;
+}
+
+.select2-container--default .select2-selection--single:focus-visible {
+    border: 1px solid #86b7fe !important;
 }
 
 .select2-container--default .select2-selection--single[aria-expanded="true"] {
