membuat halaman 5 program pojok berbagi

--- a/app/views/default.html
+++ b/app/views/default.html
@@ -118,11 +118,11 @@
                             <div class="single-footer f-link">
                                 <h3>Layanan</h3>
                                 <ul>
-                                    <li><a href="javascript:void(0)">Pojok Peduli Berbagi</a></li>
-                                    <li><a href="javascript:void(0)">Pojok Yatim</a></li>
-                                    <li><a href="javascript:void(0)">Pojok Berdaya</a></li>
-                                    <li><a href="javascript:void(0)">Pojok Wakaf</a></li>
-                                    <li><a href="javascript:void(0)">Pojok Rescue</a></li>
+                                    <li><a href="/bantuan/peduli-berbagi">Pojok Peduli Berbagi</a></li>
+                                    <li><a href="/bantuan/peduli-yatim">Pojok Yatim</a></li>
+                                    <li><a href="/bantuan/berdaya">Pojok Berdaya</a></li>
+                                    <li><a href="/bantuan/wakaf">Pojok Wakaf</a></li>
+                                    <li><a href="/bantuan/rescue">Pojok Rescue</a></li>
                                 </ul>
                             </div>
                             <!-- End Single Widget -->
