--- a/app/views/default/home/index.html
+++ b/app/views/default/home/index.html
@@ -182,27 +182,27 @@
 <section class="panel">
     <div class="container">
         <div class="row bg-white justify-content-center g-0 rounded-box border-1 border-green shadow-sm text-center">
-            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="#">
+            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="/bantuan/berdaya">
                 <span class="text-green d-none d-md-block">Lihat lebih lanjut</span>
                 <h6 class="display-6 fs-6">Pojok Berdaya</h6>
                 <i class="text-black-50 lni lni-restaurant"></i>
             </a>
-            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="#">
+            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="/bantuan/peduli-berbagi">
                 <span class="text-green d-none d-md-block">Lihat lebih lanjut</span>
                 <h6 class="display-6 fs-6">Pojok Peduli</h6>
                 <i class="text-black-50 lni lni-heart"></i>
             </a>
-            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="#">
+            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="/bantuan/peduli-yatim">
                 <span class="text-green d-none d-md-block">Lihat lebih lanjut</span>
                 <h6 class="display-6 fs-6">Pojok Yatim</h6>
                 <i class="text-black-50 lni lni-users"></i>
             </a>
-            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="#">
+            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="/bantuan/wakaf">
                 <span class="text-green d-none d-md-block">Lihat lebih lanjut</span>
                 <h6 class="display-6 fs-6">Pojok Wakaf</h6>
                 <i class="text-black-50 lni lni-infinite"></i>
             </a>
-            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="#">
+            <a class="col pb-2 ps-1 pe-1 pt-1 d-flex flex-column-reverse" href="/bantuan/rescue">
                 <span class="text-green d-none d-md-block">Lihat lebih lanjut</span>
                 <h6 class="display-6 fs-6">Pojok Rescue</h6>
                 <i class="text-black-50 lni lni-ambulance"></i>
